--- a/school/public_senior_high/accra_academy.html
+++ b/school/public_senior_high/accra_academy.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -264,7 +257,7 @@
 							<div class="panel-body">
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
-										<font color= "1a5b8f"><h4><strong>Accra Aca</strong></h4> </font>
+											<font color= "1a5b8f"><h3><strong>Accra Aca</strong></h3></font>
 										<p><strong>Accra Academy</strong></p><br>
 
 											<p>On a gentle hill to the north as one enters Accra on the Winneba road, a tall white tower beshadows the campus of Accra Academy. Over sixty years ago in the slums of James Town, Mrs. Ellen Buckle let her large two storied house for use as a classroom block to accommodate the newly founded Accra Academy.<br><br>
@@ -415,8 +408,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/10.jpg">
-						<img src="img/accra_acdemy/10.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/10.JPG">
+						<img src="img/accra_acdemy/10.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -445,8 +438,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/13.jpg">
-						<img src="img/accra_acdemy/13.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/13.JPG">
+						<img src="img/accra_acdemy/13.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -475,8 +468,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/16.jpg">
-						<img src="img/accra_acdemy/16.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/16.JPG">
+						<img src="img/accra_acdemy/16.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -525,8 +518,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/21.jpg">
-						<img src="img/accra_acdemy/21.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/21.JPG">
+						<img src="img/accra_acdemy/21.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -535,8 +528,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/22.jpg">
-						<img src="img/accra_acdemy/22.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/22.JPG">
+						<img src="img/accra_acdemy/22.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -545,8 +538,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/23.jpg">
-						<img src="img/accra_acdemy/23.jpg" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/accra_acdemy/23.JPG">
+						<img src="img/accra_acdemy/23.JPG" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -617,7 +610,7 @@
 							<br>
 							
 							<h5 class="headline">
-							<p><strong>Slambooke ©2014  English</strong></p>
+							<p>Slambooke © 2014</p>
 					</div><!-- /.col -->
 				</div><!-- /.row-->
 			</div><!-- /.padding20 -->
