--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 						<span class="icon-bar"></span>
 					</button>
 					<!-- Start Logo / Text -->
-					<a class="navbar-brand text-logo" href="#"><img src="img/slambooke.png" width="30" height="30">
-					<img src="img/slambookelogo.png" height="30" width="170"></img></a>
+					<a class="navbar-brand text-logo" href="#"><img src="img/slambooke.png" width="30" height="27">
+					<img src="img/slambookelogo.png" height="22" width="120"></img></a>
 					<!-- End Logo / Text -->
 				</div>
 				<!-- Start Navigation -->
@@ -86,13 +86,13 @@
             		<br>
             		<br>
             		<br>
-            		<br>
-            		<br>
 
-                    <h2><span class="rotate">Hello there..., :), Welcome to Slambooke</span></h2>
+            		<h3>Welcome to Slambooke.</h3>
+                    <h3><span>Find information about Ghanaian schools that interest you.<br />
+					And watch events unfold, in real time, from every angle.</span></h3>
                     <br>
                     <br>
-                    <a href="blackboard.html" class="btn btn-success">Explore now</a>
+                    <a href="blackboard.html" class="btn btn-success">Start Exploring Now</a>
                 </div>
             </div>
 		</div>
