--- a/indexapp2.html
+++ b/indexapp2.html
@@ -34,11 +34,8 @@
         <div class="container">
           <div class="navbar-header">
             <!--<a class="navbar-brand" href="index.html"><strong> Slambooke</strong></a>-->
-            <a class="navbar-brand text-logo" href="#">
-            <img src="img/slambooke.png" width="30" height="30"><font color="black"> / Welcome</font> 
-            <!--<img src="img/slambookelogo2.png" height="20" width="100"></img></a>-->
-            <!--<a class="navbar-brand" href="index.html"><img class="img-" src="img/logo.png" width="22" height="22"><strong> Slambooke</strong></a>-->
-            <!--<a class="navbar-brand" href="index.html"><span class="octicon octicon-code"></span><strong> Slambooke</strong></a>-->
+            <a class="navbar-brand text-logo" href="indexapp.html">
+            <img src="img/slambooke.png" width="30" height="30"><font color="black"><strong> / Welcome</strong></font> 
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -65,7 +62,6 @@
         <br>
         <br>
         <br>
-        <br>
 	
 	<div align="center"><br>
     <!--<img class="img-" src="nuit.png" width="125" height="125" alt="">-->
@@ -75,7 +71,7 @@
     <font color="black"><strong>Welcome to  Slambooke</strong></font><br></div>
     <font color="black">Find information about Ghanaian schools that interest you.<br> 
     And watch events unfold, in real time, from every angle.</font></h3>
-    <a href="blackboard.html" class="btn btn-default"><span class=""></span>  Explore now</a></div>
+    <a href="blackboard.html" class="btn btn-default"><span class=""></span>  Start Exploring Now</a></div>
   </div>
 
     <!--<div id="footer">
