--- a/status.html
+++ b/status.html
@@ -59,7 +59,7 @@
       <p class="lead">Brief service issue | <a href=""> Thursday June 5, 2014</a></p>
       <p>
       Between 14:01 and 14:20 GMT today, some users may have experienced issues viewing 
-      some schools on Slambooke.com. <br><br>Traffic was redirected away from the components that were experiencing problems, 
+      some pages on Slambooke.com. <br><br>Traffic was redirected away from the components that were experiencing problems, 
       and the issue has now been resolved. We apologize for any inconvenience.</p>
 
       <hr/>
