--- a/blackboard.html
+++ b/blackboard.html
@@ -48,7 +48,7 @@
 			<div class="sidebar-inner scrollable-sidebar">
 				<div class="main-menu">
 					<ul>
-						<li>
+						<li class="active">
 							<a href="blackboard.html">
 								<span class="menu-icon">
 									<i class="octicon octicon-home"></i> 
