--- a/developer.html
+++ b/developer.html
@@ -3,7 +3,7 @@
 
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
-    <title>Slambooke / Developer</title>
+    <title>Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=stylesheet type="text/css" href="static/css/bootstrap.min.css">   
     <link rel=stylesheet type="text/css" href="static/css/responsiveslides.css">  
