--- a/dev/applications.html
+++ b/dev/applications.html
@@ -207,8 +207,8 @@
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="about1">
 										<p class="m-top-sm">
-										<a href="" class="pull-left avatar m-right-sm"><img src="../static/img/nbooke.png" alt="Author"></a>
-										<a href=""><strong> Notebooke (Web Application)</strong></a><br>
+										<a href="http://notebooke.slambooke.com/" class="pull-left avatar m-right-sm"><img src="../static/img/nbooke.png" alt="Author"></a>
+										<a href="http://notebooke.slambooke.com/"><strong> Notebooke (Web Application)</strong></a><br>
 										Notebooke lets you keep your personal notes on the go with your username and password.
 										</p>
 									</div>
