--- a/dev/applications.html
+++ b/dev/applications.html
@@ -199,7 +199,7 @@
 									<li class="active"><a href="#about1" data-toggle="tab"><strong>Popular</strong></a></li>
 									<li><a href="#courses1" data-toggle="tab"><strong>Others</strong></a></li>
 									<li><a href="#events1" data-toggle="tab"><strong>Educational</strong></a></li>
-									<li><a href="#tweets1" data-toggle="tab"><strong>Tweets</strong></a></li>
+									<!--<li><a href="#tweets1" data-toggle="tab"><strong>Tweets</strong></a></li>-->
 								</ul>
 							</div>
 
@@ -209,7 +209,8 @@
 										<p class="m-top-sm">
 										<a href="http://notebooke.slambooke.com/" class="pull-left avatar m-right-sm"><img src="../static/img/nbooke.png" alt="Author"></a>
 										<a href="http://notebooke.slambooke.com/"><strong> Notebooke (Web Application)</strong></a><br>
-										Notebooke lets you keep your personal notes on the go with your username and password.
+										<span class="octicon octicon-git-branch"></span> Developed by Slambooke<br>
+										Notebooke lets you keep your personal notes on the go.
 										</p>
 									</div>
 
