--- a/support.html
+++ b/support.html
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav pull-right">
               <li class="active"><a href="blackboard.html"><strong>&nbsp;Home&nbsp;</strong></a></li>
-              <li><a href=""><strong>&nbsp;Contact a human&nbsp;</strong></a></li>
+              <li><a href="https://twitter.com/slambookeapp"><strong>&nbsp;Contact a human&nbsp;</strong></a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
