--- a/company.html
+++ b/company.html
@@ -71,7 +71,7 @@
 
         <br />
 
-        <center><p><font size="3"><font color = "1a5b8f" style = "font-size: 17px"><strong>Our Vision:</strong></font> <br>Our vision is to make schools more open and connected as well as make their informations universally accessible and useful to everyone in the world.</p></font></center><br>
+        <center><p><font size="3"><font color = "1a5b8f" style = "font-size: 17px"><strong>Our Vision:</strong></font> <br>Our vision is to make schools more open and connected as well as make their information universally accessible and useful to everyone in the world.</p></font></center><br>
       </div>
 
       <br>
