--- a/school/university/methodist_university_college.html
+++ b/school/university/methodist_university_college.html
@@ -3,7 +3,7 @@
   
 <head>
     <meta charset="utf-8">
-    <title>Regent University College</title>
+    <title>Methodist University College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Slambooke, Inc">
@@ -182,7 +182,7 @@
 							</div> 
 							<br/>
 							<div class="h4 m-t m-b-xs"><strong>Methodist University College</strong></div> 
-							<small class="text-muted m-b"><i class="octicon octicon-location"> </i> Accra - Dansoman</small>
+							<small class="text-muted m-b"><i class="octicon octicon-location"> </i> Dansoman - Accra</small>
 						</div> 
 						</div> 
 					</section>
