--- a/blackboard.html
+++ b/blackboard.html
@@ -197,6 +197,19 @@
 							<span class="line"></span>
 						</h4>
 						<img src="img/slambooke_ad_space.png" class="img-thumbnail">
+
+						<br>
+
+						<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+						<!-- Test -->
+						<ins class="adsbygoogle"
+						     style="display:inline-block;width:300px;height:600px"
+						     data-ad-client="ca-pub-9050553762392532"
+						     data-ad-slot="5780702868"></ins>
+						<script>
+						(adsbygoogle = window.adsbygoogle || []).push({});
+						</script>
+
 					</div>
 
 
