--- a/developer.html
+++ b/developer.html
@@ -48,7 +48,7 @@
 
                     <li><h5>Resources</h5></li>
                     <li class="n-github"><a href="https://github.com/slambooke" target="_blank">Github</a></li>
-                    <li class="n-doc"><a href="https://github.com/slambooke" target="_blank">Documentation</a></li>
+                    <li class="n-doc"><a href="https://github.com/slambooke/api-documentation" target="_blank">Documentation</a></li>
                     <!--<li class="n-mailing"><a href="" target="_blank">Mailing List</a></li>-->
                 </ul>
             </div>
@@ -60,7 +60,7 @@
 
             <ul class="row docs">
                 <li class="span4">
-                    <a target="_blank" href="https://github.com/slambooke" class="api">
+                    <a target="_blank" href="https://github.com/slambooke/api-documentation" class="api">
                         <strong>Platform Documentation</strong><br/>
                         View on GitHub
                     </a>
