--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav menu-right">
 						<li class="active"><a href="blackboard.html">Explore</a></li>
-						<li><a href="company.html">Company</a></li>
-						<li><a href="blog/index.html">Blog</a></li>
-						<li><a href="developer.html">Developer</a></li>
-						<li><a href="support.html">Help</a></li>
-						<li><a href="terms.html">Terms</a></li>
+						<li><a target="_blank" href="company.html">Company</a></li>
+						<li><a target="_blank" href="blog/index.html">Blog</a></li>
+						<li><a target="_blank" href="developer.html">Developer</a></li>
+						<li><a target="_blank" href="support.html">Help</a></li>
+						<li><a target="_blank" href="terms.html">Terms</a></li>
 					</ul>
 				</div>
 				<!-- End Navigation  -->
