--- a/dev/applications.html
+++ b/dev/applications.html
@@ -69,9 +69,9 @@
             <div class="span8 offset1 content">
 
 
-<h1>Applications</h1>
+<h1>Applications and Websites</h1>
 <p>
-Below you can find a list of applications built by <strong>Slambooke</strong> and developers in our partner program. Feel free to try them.
+Below you can find a list of applications and websites built by <strong>Slambooke</strong> and developers in our partner program. Feel free to try them.
 </p>
 
 <hr>
