--- a/school/university/valley_view_university_college.html
+++ b/school/university/valley_view_university_college.html
@@ -48,13 +48,6 @@
 		
 		<aside class="fixed skin-6">	
 			<div class="sidebar-inner scrollable-sidebar">
-				<div class="size-toggle">
-					<a class="btn btn-sm" id="sizeToggle">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
-				</div><!-- /size-toggle -->
 				<div class="main-menu">
 					<ul>
 						<li>
@@ -308,8 +301,8 @@
 									<div class="tab-pane fade" id="photo1">
 										<div class="gallery-container">
 										<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/1.JPG">
-						<img src="img/vvu/1.JPG" alt="gallery1">		
+					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/1.jpg">
+						<img src="img/vvu/1.jpg" alt="gallery1">		
 						<div class="image-overlay">
 							
 						</div>	
