--- a/school/university/valley_view_university_college.html
+++ b/school/university/valley_view_university_college.html
@@ -301,16 +301,16 @@
 									<div class="tab-pane fade" id="photo1">
 										<div class="gallery-container">
 										<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/1.jpg">
-						<img src="img/vvu/1.jpg" alt="gallery1">		
+					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/1.JPG">
+						<img src="img/vvu/1.JPG" alt="gallery1">		
 						<div class="image-overlay">
 							
 						</div>	
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1"  href="img/vvu/2.jpg">
-						<img src="img/vvu/2.jpg" alt="gallery2">
+					<a class="image-wrapper" data-lightbox="example-1"  href="img/vvu/2.JPG">
+						<img src="img/vvu/2.JPG" alt="gallery2">
 						<div class="image-overlay">
 							<div class="image-info">
 								
