--- a/school/polytechnics.html
+++ b/school/polytechnics.html
@@ -219,7 +219,7 @@
                     <div class="img-thumbnail pull-left">
                        <a href="polytechnic/accra_polytechnic.html"> <img src="polytechnic/img/logos/accra_poly.jpg" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/accra_polytechnic.html">Accra Polytechnic</a></strong></h4>
-                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Barnes Rd - Greater Accra</h5>
+                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Accra - Greater Accra Region</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> 030-268-9276</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@ug.apt.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href="http://www.apoly.edu.gh" target ="_blank"> www.apoly.edu.gh</a></font>
                 </div>
 
@@ -227,7 +227,7 @@
                     <div class="img-thumbnail pull-left">
                          <a href="polytechnic/tamale_polytechnic.html"> <img src="polytechnic/img/logos/tamale_poly.JPG" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/tamale_polytechnic.html">Tamale Polytechnic</a></strong></h4>
-                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Tamale - Nothing Region </h5>
+                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Tamale - Northern Region </h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> registrar@tamalepoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.tamalepoly.edu.gh/" target ="_blank"> www.tamalepoly.edu.gh</a></font>
                 </div>
 
@@ -235,7 +235,7 @@
                     <div class="img-thumbnail pull-left">
                        <a href="polytechnic/sunyani_polytechnic.html"> <img src="polytechnic/img/logos/sunyani_poly.JPG" height="90" width="90">
                     </div><h4><strong>&nbsp;&nbsp;&nbsp; <a href="polytechnic/sunyani_polytechnic.html">Sunyani Polytechnic</a></strong></h4>
-                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Sunyani - BronAhafo Region</h5>
+                    <h5>&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-location"> </i>  Sunyani - Brong Ahafo Region</h5>
                     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="octicon octicon-device-mobile"> </i><font color = "005ad9"> N/A</font><!--</i>   555-555-5555  </span>--> | <span><i class="octicon octicon-mail"></i><font color = "005ad9"> admissions@spoly.edu.gh</font> | <i class="octicon octicon-globe"></i> <font color ="005ad9"><a href=" http://www.spoly.edu.gh/" target ="_blank"> www.spoly.edu.gh</a></font>
                 </div>
 
