--- a/school/public_senior_high/accra_academy.html
+++ b/school/public_senior_high/accra_academy.html
@@ -18,7 +18,7 @@
 	<!-- Pace -->
 	<link href="../../css/pace.css" rel="stylesheet">
 
-	<link href="../../lightbox/css/lightbox.css" rel="stylesheet" />
+	<link href="../lightbox/css/lightbox.css" rel="stylesheet" />
 
 	<link href="../../css/animate.css" rel="stylesheet">
 	
@@ -27,7 +27,6 @@
 	<link href="../../css/endless-skin.css" rel="stylesheet">
 
 	<link href="octicons/octicons.css" rel="stylesheet">
-	
   </head>
 
   <body class="overflow-hidden">
@@ -623,8 +622,7 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-	
-	<script src="../../js/jquery-1.10.2.min.js"></script>
+<script src="../../js/jquery-1.10.2.min.js"></script>
 	
 	<!-- Bootstrap -->
     <script src="../../bootstrap/js/bootstrap.min.js"></script>
@@ -635,7 +633,7 @@
     <!-- Pace -->
 	<script src='../../js/pace.min.js'></script>
 
-	<script src="../../lightbox/js/lightbox.min.js"></script>
+	<script src="../lightbox/js/lightbox.min.js"></script>
 	
 	<!-- Popup Overlay -->
 	<script src='../../js/jquery.popupoverlay.min.js'></script>
@@ -648,7 +646,6 @@
 
 	<!-- Endless -->
 	<script src="../../js/endless/endless.js"></script>
-	
 	<script>
 		$(function()	{
 			//Colorbox 
