--- a/blackboard.html
+++ b/blackboard.html
@@ -192,11 +192,11 @@
 
 						<br>
 
-						<h4 class="headline m-top-md"> 
+						<!--<h4 class="headline m-top-md"> 
 							<strong>Ads</strong>
 							<span class="line"></span>
 						</h4>
-						<img src="img/slambooke_ad_space.png" class="img-thumbnail">
+						<img src="img/slambooke_ad_space.png" class="img-thumbnail">-->
 					</div>
 
 
@@ -469,7 +469,7 @@
 							<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
-										<img src="school/polytechnic/img/logos/kumasi_poly.jpg" class="img-" alt="school logo"> 
+										<img src="school/polytechnic/img/logos/kumasi_poly.JPG" class="img-" alt="school logo"> 
 									</a>
 									<div class="pull-left m-left-sm">
 										<strong class="font-14 block">Kumasi Polytechnic</strong>
