Revert "Update valley_view_university_college.html"
This reverts commit 46a92ca48ff0ec899d8926baeac25521b7ca0cd5.

--- a/school/university/valley_view_university_college.html
+++ b/school/university/valley_view_university_college.html
@@ -359,8 +359,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/7.JPG">
-						<img src="img/vvu/7.JPG" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/7.jpg">
+						<img src="img/vvu/7.jpg" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 								
@@ -379,8 +379,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/9.JPG">
-						<img src="img/vvu/9.JPG" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/9.jpg">
+						<img src="img/vvu/9.jpg" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -389,8 +389,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/10.JPG">
-						<img src="img/vvu/10.JPG" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/10.jpg">
+						<img src="img/vvu/10.jpg" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 
@@ -399,8 +399,8 @@
 					</a><!-- /image-wrapper -->
 				</div><!-- /gallery-item -->
 				<div class="gallery-item">
-					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/11.JPG">
-						<img src="img/vvu/11.JPG" alt="gallery4">
+					<a class="image-wrapper" data-lightbox="example-1" href="img/vvu/11.jpg">
+						<img src="img/vvu/11.jpg" alt="gallery4">
 						<div class="image-overlay">
 							<div class="image-info">
 								
