--- a/blackboard.html
+++ b/blackboard.html
@@ -203,7 +203,7 @@
 					<div class="col-md-7">
 						<h4 class="headline m-top-md">
 							<span class="octicon octicon-flame"></span> 
-							<strong> (34) Trending schools in Ghana you might be interested in.</strong>
+							<strong> Trending schools in Ghana you might be interested in.</strong>
 							<span class="line"></span>
 						</h4>
 					</div>
@@ -466,7 +466,7 @@
 								</div>
 							</div><!-- /panel -->
 
-							<div class="panel panel-default">
+							<!--<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
 										<img src="school/polytechnic/img/logos/kumasi_poly.JPG" class="img-" alt="school logo"> 
@@ -796,7 +796,7 @@
 							</div><!-- /panel -->
 
 
-							<div class="panel panel-default">
+							<!--<div class="panel panel-default">
 								<div class="panel-body">
 									<a class="pull-left avatar"> 
 										<img src="school/polytechnic/img/logos/sunyani_poly.jpg" class="img-" alt="school logo"> 
